removed scrolling issue on mobile

--- a/coldpress/r/css/mobile.css
+++ b/coldpress/r/css/mobile.css
@@ -96,9 +96,6 @@
 
 @media (max-width: 30em) {
 
-    body {
-        display: block;
-    }
 
     .update {
         flex-direction: column;
